Table users {
  id int [pk]
  name varchar
  password varchar
  email varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table revenue {
  id int [pk]
  description varchar
  value decimal
  date date
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
  created_by int [ref: > users.id]
}

Table expenses {
  id int [pk]
  description varchar
  value decimal
  limit decimal
  remaining_balance decimal
  due_date date
  spending_status ENUM('OK', 'ATTENTION', 'CRITICAL')
  expenses_groups_id int [ref: > expense_groups.id]
  created_by int [ref: > users.id] 
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table credit_cards {
  id int [pk]
  created_by int [ref: > users.id]
  name varchar
  limit decimal
  total_spent decimal
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table credit_card_transactions {
  id int [pk]
  created_by int [ref: > users.id]
  credit_card_id int [ref: > credit_cards.id]
  description varchar  
  amount decimal   
  transaction_date timestamp
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table payments {
  id int [pk]
  paid_value decimal
  payment_date date
  created_by int [ref: > users.id]
  expense_id int [ref: > expenses.id]
 payment_status ENUM('PAID', 'LATE', 'TO PAY')
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table expense_groups {
  id int [pk]
  name varchar
  total_spent decimal
  created_by int [ref: > users.id]
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table financial_summary {
  id int [pk]
  total_revenue decimal
  created_by int [ref: > users.id]
  total_expenses decimal
  remaining_balance decimal
  summary_date timestamp
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}